--- a/worksheet_03.ipynb
+++ b/worksheet_03.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  Jeetkumar Satish Vijaywargi\n",
+    "Name:  Jeetkumar Satish Vijaywargi -> :) \n",
     "UID: U00204914\n",
     "\n",
     "### Topics\n",
