--- a/worksheet_03.ipynb
+++ b/worksheet_03.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Must be testable"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +40,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Positive Numbers, Primes, Evens"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +54,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "C"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +72,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1st => Positive <br>\n",
+    "2nd => Negative <br>\n",
+    "3rd => Negative"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,7 +88,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "C(1,2,3) => Positive"
+   ]
   },
   {
    "attachments": {},
@@ -91,7 +103,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Firstly, ask who the model is intended for.<br>\n",
+    "Process the Data<br>\n",
+    "Explore the data<br>\n",
+    "You might need to go back to data processing at this moment in time <br>\n",
+    "Extract Features <br>\n",
+    "Might need to go back to explore data <br>\n",
+    "Create models <br>\n",
+    "Might need to go back and extract more features <br>\n",
+    "<br>\n",
+    "Pattern => At every major step, you might have to follow the previous step again. <br>\n",
+    "\n",
+    "In short: Process Data -> Explore Data -> Extract Features -> Create Model -/-/-> Keep Repeating these steps\n"
+   ]
   },
   {
    "attachments": {},
@@ -109,7 +134,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Records: Name, Age, Balance <br>\n",
+    "Graph: Adjacency Matrix <br>\n",
+    "Image: Matrix of pixels/bits <br>\n",
+    "Text: Stored as list of words, corpus of documents, frequency/count of word\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -122,7 +153,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The goal of unsupervised learning is to understand varied / interesting structures of data. For example tech companies can segment ads into grouping and group other people based on their likes, browsing behaviour, history and other meta data from the internet, and target specific ads for you. "
+   ]
   },
   {
    "attachments": {},
@@ -135,7 +168,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For example relationship between temperature and animal sounds. Or how email categorizes your emails as spam or not spam. The data has been trained for a long time"
+   ]
   }
  ],
  "metadata": {
