--- a/worksheet_03.ipynb
+++ b/worksheet_03.ipynb
@@ -138,7 +138,7 @@
     "Records: Name, Age, Balance <br>\n",
     "Graph: Adjacency Matrix <br>\n",
     "Image: Matrix of pixels/bits <br>\n",
-    "Text: Stored as list of words, corpus of documents, frequency/count of word\n",
+    "Text: Stored as list of words, stanzas/verses,\n",
     "\n"
    ]
   },
