--- a/worksheet_03.ipynb
+++ b/worksheet_03.ipynb
@@ -41,6 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Whethere there is any co-relation between temperature outside and water bottles sold <br>\n",
+    "Whether or not there exists a prime number that is a palindrome <br>\n",
     "Positive Numbers, Primes, Evens"
    ]
   },
