--- a/worksheet_05.ipynb
+++ b/worksheet_05.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jeetkumar Vijaywargi\n",
+    "UID: U00204914\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -46,7 +46,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Randomly pick k centeres {u1, u2, ..., uk} from X\n",
+    "2. Assign each point in the dataset to its closest center\n",
+    "3. Compute the new centers as the means of each cluster\n",
+    "4. Repeat 2 & 3 until convergence\n",
+    "\n",
+    "\n",
+    "Iteration 1:\n",
+    "* [0, 0.5] is closest to centroid 0\n",
+    "* [1.5, 2, 6, 6.5, 7] is closest to centroid 2\n",
+    "* New centroids are [0.25, 4.6]\n",
+    "\n",
+    "Iteration 2: \n",
+    "* [0, 0.5, 1.5, 2] is closest to centroid 0.25\n",
+    "* [6, 6.5, 7] is closest to centroid 4.6\n",
+    "* New centroids are [1, 6.5]\n",
+    "\n",
+    "Iteration 3: \n",
+    "* [0, 0.5, 1.5, 2] is closest to centroid 1\n",
+    "* [6, 6.5, 7] is closest to centroid 6.5\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +81,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The cost function for K measures how spread out data points are from the center of their assigned cluster. Basically how far is each point from the middle of the cluster. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +95,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The algorithm can possible get stuck at local minimum or it is also possible that the initial centroids were poorly choosen. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +109,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Lloyds algorithm will always converge because there are finite ways to assign each point to clusters. With every iteration, the algorithm either assigns the point to a different cluster or keeps it in the same clister. As the possibility number of arrangements is finite, the algorithm will always converge at some point. "
+   ]
   },
   {
    "attachments": {},
@@ -94,9 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston University/2023-2024/Fall/CS506/Worksheets/worksheet_05.ipynb Cell 11\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_05.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPIL\u001b[39;00m \u001b[39mimport\u001b[39;00m Image \u001b[39mas\u001b[39;00m im\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_05.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_05.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdatasets\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mdatasets\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_05.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m centers \u001b[39m=\u001b[39m [[\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m], [\u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m], [\u001b[39m-\u001b[39m\u001b[39m3\u001b[39m, \u001b[39m2\u001b[39m], [\u001b[39m2\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m4\u001b[39m]]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_05.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m X, _ \u001b[39m=\u001b[39m datasets\u001b[39m.\u001b[39mmake_blobs(n_samples\u001b[39m=\u001b[39m\u001b[39m300\u001b[39m, centers\u001b[39m=\u001b[39mcenters, cluster_std\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, random_state\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from PIL import Image as im\n",
@@ -105,6 +146,7 @@
     "\n",
     "centers = [[0, 0], [2, 2], [-3, 2], [2, -4]]\n",
     "X, _ = datasets.make_blobs(n_samples=300, centers=centers, cluster_std=1, random_state=0)\n",
+    "# print(X)\n",
     "\n",
     "class KMeans():\n",
     "\n",
@@ -115,24 +157,95 @@
     "        self.snaps = []\n",
     "    \n",
     "    def snap(self, centers):\n",
+    "        # print(5)\n",
     "        TEMPFILE = \"temp.png\"\n",
     "\n",
     "        fig, ax = plt.subplots()\n",
     "        ax.scatter(X[:, 0], X[:, 1], c=self.assignment)\n",
     "        ax.scatter(centers[:,0], centers[:, 1], c='r')\n",
     "        fig.savefig(TEMPFILE)\n",
+    "        # print(TEMPFILE)\n",
     "        plt.close()\n",
     "        self.snaps.append(im.fromarray(np.asarray(im.open(TEMPFILE))))\n",
     "\n",
+    "    def initialize(self):\n",
+    "        return self.data[np.random.choice(range(len(self.data)),self.k, replace = False)]\n",
+    "    \n",
+    "    def distance(self,x,y):\n",
+    "        return  np.linalg.norm(x-y)\n",
+    "    \n",
+    "                         \n",
+    "    def assign(self, centers):\n",
+    "        for i in range(len(self.data)):\n",
+    "            delta = [float('inf'),0]\n",
+    "            for j in range(len(centers)):\n",
+    "                distance = self.distance(centers[j],self.data[i])\n",
+    "                if distance<delta[0]:\n",
+    "                    delta[0] = distance \n",
+    "                    delta[1] = j \n",
+    "            \n",
+    "            self.assignment[i] = delta[1]\n",
+    "\n",
+    "\n",
+    "            \n",
+    "    def get_centers(self):\n",
+    "        centers = []\n",
+    "\n",
+    "        for i in set(self.assignment):\n",
+    "            cluster = []\n",
+    "\n",
+    "            for j in range(len(self.data)):\n",
+    "                \n",
+    "                if self.assignment[j] ==i:\n",
+    "                    cluster.append(self.data[j])\n",
+    "            x = 0\n",
+    "            y = 0\n",
+    "            for delta in range(len(cluster)):\n",
+    "                x+=cluster[delta][0]\n",
+    "                y+=cluster[delta][1]\n",
+    "            centers.append([x/len(cluster), y/len(cluster)])\n",
+    "        \n",
+    "        return np.array(centers)\n",
+    "\n",
+    "            \n",
+    "    def is_diff_centers(self,centers, new_centers):\n",
+    "        n = len(centers)\n",
+    "        flag = 0\n",
+    "        for i in range(n):\n",
+    "            if centers[i][0]!=new_centers[i][0]:\n",
+    "                flag = 1\n",
+    "        \n",
+    "        if flag ==1:\n",
+    "            return True \n",
+    "        return False\n",
+    "\n",
+    "\n",
     "\n",
     "    def lloyds(self):\n",
-    "        ...\n",
-    "        return\n",
+    "        # ...\n",
+    "        # print(15)\n",
+    "        centers = self.initialize()\n",
+    "        self.assign(centers)\n",
+    "        self.snap(centers)\n",
+    "        new_centers = self.get_centers()\n",
+    "\n",
+    "        while self.is_diff_centers(centers,new_centers):\n",
+    "            # print(10)\n",
+    "            \n",
+    "            self.assign(new_centers)\n",
+    "            centers = new_centers\n",
+    "            self.snap(centers)\n",
+    "            new_centers = self.get_centers()\n",
+    "\n",
+    "        \n",
+    "        return \n",
+    "\n",
     "            \n",
     "\n",
-    "kmeans = KMeans(X, 6)\n",
+    "kmeans = KMeans(X, 4)\n",
     "kmeans.lloyds()\n",
     "images = kmeans.snaps\n",
+    "# print(kmeans.snaps)\n",
     "\n",
     "images[0].save(\n",
     "    'kmeans.gif',\n",
@@ -152,8 +265,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
