--- a/worksheet_08.ipynb
+++ b/worksheet_08.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 08\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jeetkumar Vijaywargi \n",
+    "UID: U00204914\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -26,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.450782746369228, 4.938010622723292, 5.40972024226049, 3.506909116239539, 3.700874338674141, 5.1780732878996805, 7.182610905523603, 5.8029387478142835, 3.6083390708651573, 5.221768111695457]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -50,11 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7.766975203514374, 5.61375710539513, 9.826693970798498, 7.202210250532208, 9.75759247350589, 7.050564012340181, 10.68299774037868, 9.16770805727318, 7.555095479700596, 6.74678240374675]\n"
+     ]
+    }
+   ],
    "source": [
-    "s2 = np.random.normal( ... , ... , ... ).tolist()\n",
+    "s2 = np.random.normal(8, 1, 10).tolist()\n",
     "print(s2)"
    ]
   },
@@ -67,19 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.74678240374675, 5.221768111695457, 3.6083390708651573, 5.8029387478142835, 7.555095479700596, 9.16770805727318, 10.68299774037868, 7.050564012340181, 7.182610905523603, 9.75759247350589]\n"
+     ]
+    }
+   ],
    "source": [
     "data = []\n",
     "for i in range(10):\n",
     "    # flip coin\n",
     "    coin_output = random.choice([0, 1])\n",
     "    if coin_output == 0:\n",
-    "        p1 = ...\n",
+    "        p1 = s1.pop()\n",
     "        data.append(p1)\n",
     "    else:\n",
-    "        p2 = ...\n",
+    "        p2 = s2.pop()\n",
     "        data.append(p2)\n",
     "print(data)"
    ]
@@ -94,7 +118,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The probability is half. There are parameter of other individual gaussian methods we used to generate this data. Other than the fair coin. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,15 +137,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.74678240374675, 5.221768111695457, 3.6083390708651573, 5.8029387478142835, 7.555095479700596, 7.050564012340181, 7.182610905523603]\n",
+      "Ellipsis\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/cluster/_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=10)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'ellipsis' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb Cell 10\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m s2 \u001b[39m=\u001b[39m \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(s2)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m prob_s \u001b[39m=\u001b[39m [ \u001b[39mlen\u001b[39m(s1) \u001b[39m/\u001b[39m (\u001b[39mlen\u001b[39m(s1) \u001b[39m+\u001b[39m \u001b[39mlen\u001b[39;49m(s2)) , \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m ]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m mean \u001b[39m=\u001b[39m [ \u001b[39msum\u001b[39m(s1)\u001b[39m/\u001b[39m\u001b[39mlen\u001b[39m(s1) , \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m ]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m var \u001b[39m=\u001b[39m [ \u001b[39msum\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mlambda\u001b[39;00m x : (x \u001b[39m-\u001b[39m mean[\u001b[39m0\u001b[39m])\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m, s1)) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(s1) , \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m ]\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'ellipsis' has no len()"
+     ]
+    }
+   ],
    "source": [
     "kmeans = KMeans(2, init='k-means++').fit(X=np.array(data).reshape(-1, 1))\n",
     "\n",
     "s1 = [x[0] for x in filter(lambda x: x[1] == 0, zip(data, kmeans.labels_))]\n",
     "print(s1)\n",
-    "s2 = ...\n",
+    "s2 = [x[1] for x in filter(lambda x: x[1] == 1, zip(data, kmeans.labels_))]\n",
     "print(s2)\n",
     "\n",
     "prob_s = [ len(s1) / (len(s1) + len(s2)) , ... ]\n",
@@ -260,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
