--- a/worksheet_08.ipynb
+++ b/worksheet_08.ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.450782746369228, 4.938010622723292, 5.40972024226049, 3.506909116239539, 3.700874338674141, 5.1780732878996805, 7.182610905523603, 5.8029387478142835, 3.6083390708651573, 5.221768111695457]\n"
+      "[5.2446949454293845, 3.1323056942177874, 8.246042743508399, 5.3991566008498735, 5.134435613662363, 5.09225063745143, 5.1676174875855985, 5.223705980092602, 5.104608095902072, 4.975234681986382]\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7.766975203514374, 5.61375710539513, 9.826693970798498, 7.202210250532208, 9.75759247350589, 7.050564012340181, 10.68299774037868, 9.16770805727318, 7.555095479700596, 6.74678240374675]\n"
+      "[9.216722633537195, 7.370041691731539, 7.889375829717049, 6.920389165382842, 8.368421291678374, 8.811836738133685, 6.9865623156462915, 9.096190547125564, 6.468840475968554, 7.097982177557282]\n"
      ]
     }
    ],
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6.74678240374675, 5.221768111695457, 3.6083390708651573, 5.8029387478142835, 7.555095479700596, 9.16770805727318, 10.68299774037868, 7.050564012340181, 7.182610905523603, 9.75759247350589]\n"
+      "[7.097982177557282, 4.975234681986382, 5.104608095902072, 5.223705980092602, 6.468840475968554, 5.1676174875855985, 5.09225063745143, 5.134435613662363, 5.3991566008498735, 8.246042743508399]\n"
      ]
     }
    ],
@@ -137,15 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6.74678240374675, 5.221768111695457, 3.6083390708651573, 5.8029387478142835, 7.555095479700596, 7.050564012340181, 7.182610905523603]\n",
-      "Ellipsis\n"
+      "[4.975234681986382, 5.104608095902072, 5.223705980092602, 5.1676174875855985, 5.09225063745143, 5.134435613662363, 5.3991566008498735]\n",
+      "[7.097982177557282, 6.468840475968554, 8.246042743508399]\n",
+      "P(S_1) = 0.7,  P(S_2) = 0.3\n",
+      "mean_1 = 5.156715585361474,  mean_2 = 7.270955132344746\n",
+      "var_1 = 0.014812406549277414,  var_2 = 0.5413678048354141\n"
      ]
     },
     {
@@ -155,17 +158,6 @@
       "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/cluster/_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
       "  super()._check_params_vs_input(X, default_n_init=10)\n"
      ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'ellipsis' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb Cell 10\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m s2 \u001b[39m=\u001b[39m \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(s2)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m prob_s \u001b[39m=\u001b[39m [ \u001b[39mlen\u001b[39m(s1) \u001b[39m/\u001b[39m (\u001b[39mlen\u001b[39m(s1) \u001b[39m+\u001b[39m \u001b[39mlen\u001b[39;49m(s2)) , \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m ]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m mean \u001b[39m=\u001b[39m [ \u001b[39msum\u001b[39m(s1)\u001b[39m/\u001b[39m\u001b[39mlen\u001b[39m(s1) , \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m ]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/Fall/CS506/Worksheets/worksheet_08.ipynb#X12sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m var \u001b[39m=\u001b[39m [ \u001b[39msum\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mlambda\u001b[39;00m x : (x \u001b[39m-\u001b[39m mean[\u001b[39m0\u001b[39m])\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m, s1)) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(s1) , \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m ]\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'ellipsis' has no len()"
-     ]
     }
    ],
    "source": [
@@ -173,16 +165,16 @@
     "\n",
     "s1 = [x[0] for x in filter(lambda x: x[1] == 0, zip(data, kmeans.labels_))]\n",
     "print(s1)\n",
-    "s2 = [x[1] for x in filter(lambda x: x[1] == 1, zip(data, kmeans.labels_))]\n",
+    "s2 = [x[0] for x in filter(lambda x: x[1] == 1, zip(data, kmeans.labels_))]\n",
     "print(s2)\n",
     "\n",
-    "prob_s = [ len(s1) / (len(s1) + len(s2)) , ... ]\n",
-    "mean = [ sum(s1)/len(s1) , ... ]\n",
-    "var = [ sum(map(lambda x : (x - mean[0])**2, s1)) / len(s1) , ... ]\n",
+    "prob_s = [ len(s1) / (len(s1) + len(s2)) , len(s2) / (len(s1) + len(s2)) ]\n",
+    "mean = [ sum(s1)/len(s1) , sum(s2)/len(s2) ]\n",
+    "var = [ sum(map(lambda x : (x - mean[0])**2, s1)) / len(s1) , sum(map(lambda x : (x - mean[1])**2, s2)) / len(s2) ]\n",
     "\n",
     "print(\"P(S_1) = \" + str(prob_s[0]) + \",  P(S_2) = \" + str(prob_s[1]))\n",
     "print(\"mean_1 = \" + str(mean[0]) + \",  mean_2 = \" + str(mean[1]))\n",
-    "print(\"var_1 = \" + str(var[0]) + \",  var_2 = \" + str(var[1]))"
+    "print(\"var_1 = \" + str(var[0]) + \",  var_2 = \" + str(var[1]))\n"
    ]
   },
   {
@@ -199,9 +191,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "point =  7.097982177557282\n",
+      "probability of observing that point if it came from cluster 0 =  0.0\n",
+      "probability of observing that point if it came from cluster 1 =  0.7002444472882792\n",
+      "point =  4.975234681986382\n",
+      "probability of observing that point if it came from cluster 0 =  6.827120509552089e-32\n",
+      "probability of observing that point if it came from cluster 1 =  9.173596202711429e-05\n",
+      "point =  5.104608095902072\n",
+      "probability of observing that point if it came from cluster 0 =  0.05534310854837133\n",
+      "probability of observing that point if it came from cluster 1 =  0.00024561270941308565\n",
+      "point =  5.223705980092602\n",
+      "probability of observing that point if it came from cluster 0 =  0.0009745408055254132\n",
+      "probability of observing that point if it came from cluster 1 =  0.0005781831405590303\n",
+      "point =  6.468840475968554\n",
+      "probability of observing that point if it came from cluster 0 =  0.0\n",
+      "probability of observing that point if it came from cluster 1 =  0.2458785790226317\n",
+      "point =  5.1676174875855985\n",
+      "probability of observing that point if it came from cluster 0 =  20.542688288263133\n",
+      "probability of observing that point if it came from cluster 1 =  0.00038866896810995147\n",
+      "point =  5.09225063745143\n",
+      "probability of observing that point if it came from cluster 0 =  0.0020766518647761987\n",
+      "probability of observing that point if it came from cluster 1 =  0.0002241135938330203\n",
+      "point =  5.134435613662363\n",
+      "probability of observing that point if it came from cluster 0 =  8.68961952523653\n",
+      "probability of observing that point if it came from cluster 1 =  0.0003057334379573884\n",
+      "point =  5.3991566008498735\n",
+      "probability of observing that point if it came from cluster 0 =  1.8118213594761443e-57\n",
+      "probability of observing that point if it came from cluster 1 =  0.0018686129791399362\n",
+      "point =  8.246042743508399\n",
+      "probability of observing that point if it came from cluster 0 =  0.0\n",
+      "probability of observing that point if it came from cluster 1 =  0.14553149278727676\n",
+      "7.097982177557282\n",
+      "Probability of coming from S_0 = 0.0\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "4.975234681986382\n",
+      "Probability of coming from S_0 = 1.7364997873912463e-27\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "5.104608095902072\n",
+      "Probability of coming from S_0 = 0.9981016107851706\n",
+      "Probability of coming from S_1 = 0.0018983892148294163\n",
+      "\n",
+      "5.223705980092602\n",
+      "Probability of coming from S_0 = 0.7972789273162091\n",
+      "Probability of coming from S_1 = 0.20272107268379091\n",
+      "\n",
+      "6.468840475968554\n",
+      "Probability of coming from S_0 = 0.0\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "5.1676174875855985\n",
+      "Probability of coming from S_0 = 0.9999918914670802\n",
+      "Probability of coming from S_1 = 8.108532919789467e-06\n",
+      "\n",
+      "5.09225063745143\n",
+      "Probability of coming from S_0 = 0.9557929493935783\n",
+      "Probability of coming from S_1 = 0.044207050606421765\n",
+      "\n",
+      "5.134435613662363\n",
+      "Probability of coming from S_0 = 0.9999849214755412\n",
+      "Probability of coming from S_1 = 1.5078524458835895e-05\n",
+      "\n",
+      "5.3991566008498735\n",
+      "Probability of coming from S_0 = 2.262417750120106e-54\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "8.246042743508399\n",
+      "Probability of coming from S_0 = 0.0\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import norm\n",
     "\n",
@@ -223,17 +292,20 @@
     "        prob_s[j]\n",
     "\n",
     "    # P(X_i) = P(S_0)P(X_i | S_0) + P(S_1)P(X_i | S_1)\n",
-    "    prob_x = prob_s[0] * pdf_i[0] + prob_s[1] * pdf_i[1]\n",
+    "    prob_x_i = prob_s[0] * pdf_i[0] + prob_s[1] * pdf_i[1]\n",
     "\n",
-    "    # P(S_j | X_i) = P(X_i | S_j)P(S_j) / P(X_i)\n",
-    "    prob_s0_x.append( ... )\n",
-    "    prob_s1_x.append( ... )\n",
+    "    # P(S_0 | X_i) = P(X_i | S_0)P(S_0) / P(X_i)\n",
+    "    prob_s0_x_i = (pdf_i[0] * prob_s[0]) / prob_x_i\n",
+    "    prob_s0_x.append( prob_s0_x_i )\n",
+    "    # P(S_1 | X_i) = P(X_i | S_1)P(S_1) / P(X_i)\n",
+    "    prob_s1_x_i = (pdf_i[1] * prob_s[1]) / prob_x_i\n",
+    "    prob_s1_x.append( prob_s1_x_i )\n",
     "\n",
     "probs = zip(data, prob_s0_x, prob_s1_x)\n",
     "for p in probs:\n",
     "    print(p[0])\n",
-    "    print(\"Probability of coming from S_1 = \" + str(p[1]))\n",
-    "    print(\"Probability of coming from S_2 = \" + str(p[2]))\n",
+    "    print(\"Probability of coming from S_0 = \" + str(p[1]))\n",
+    "    print(\"Probability of coming from S_1 = \" + str(p[2]))\n",
     "    print()\n"
    ]
   },
@@ -246,13 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(S_1) = 0.7,  P(S_2) = 0.3\n",
+      "mean_1 = 5.1416473388939075,  mean_2 = 6.378756701382762\n",
+      "var_1 = 0.002061920387540103,  var_2 = 1.3885691692101556\n"
+     ]
+    }
+   ],
    "source": [
-    "prob_c = [sum(prob_s0_x)/ len(prob_s0_x), ... ]\n",
-    "mean = [sum([x[0] * x[1] for x in zip(prob_s0_x, data)]) / sum(prob_s0_x), ... ]\n",
-    "var = [ ... , ... ]\n",
+    "prob_c = [sum(prob_s0_x)/ len(prob_s0_x), sum(prob_s1_x) / len(prob_s1_x)]\n",
+    "mean = [sum([x[0] * x[1] for x in zip(prob_s0_x, data)]) / sum(prob_s0_x), sum([x[0] * x[1] for x in zip(prob_s1_x, data)]) / sum(prob_s1_x)  ]\n",
+    "var = [sum([x[0] * ((x[1] - mean[0])**2) for x in zip(prob_s0_x, data)]) / sum(prob_s0_x) , sum([x[0] * ((x[1] - mean[1])**2) for x in zip(prob_s1_x, data)]) / sum(prob_s1_x)]\n",
     "\n",
     "print(\"P(S_1) = \" + str(prob_s[0]) + \",  P(S_2) = \" + str(prob_s[1]))\n",
     "print(\"mean_1 = \" + str(mean[0]) + \",  mean_2 = \" + str(mean[1]))\n",
@@ -273,10 +355,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.097982177557282\n",
+      "Probability of coming from S_0 = 0.0\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "4.975234681986382\n",
+      "Probability of coming from S_0 = 0.0\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "5.104608095902072\n",
+      "Probability of coming from S_0 = 7.896654698864794e-68\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "5.223705980092602\n",
+      "Probability of coming from S_0 = 0.0\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "6.468840475968554\n",
+      "Probability of coming from S_0 = 0.0\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "5.1676174875855985\n",
+      "Probability of coming from S_0 = 3.1812289313800817e-32\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "5.09225063745143\n",
+      "Probability of coming from S_0 = 2.2185454336477307e-122\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "5.134435613662363\n",
+      "Probability of coming from S_0 = 0.6676909779738132\n",
+      "Probability of coming from S_1 = 0.33230902202618684\n",
+      "\n",
+      "5.3991566008498735\n",
+      "Probability of coming from S_0 = 0.0\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n",
+      "8.246042743508399\n",
+      "Probability of coming from S_0 = 0.0\n",
+      "Probability of coming from S_1 = 1.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob_s0_x = []  # P(S_0 | X_i)\n",
+    "prob_s1_x = []  # P(S_1 | X_i)\n",
+    "\n",
+    "for p in data:\n",
+    "    pdf_i = []\n",
+    "\n",
+    "    for j in range(k):\n",
+    "        # P(X_i | S_j)\n",
+    "        pdf_i.append(norm.pdf(p, mean[j], var[j]))\n",
+    "\n",
+    "    # P(S_0 | X_i) = P(X_i | S_0)P(S_0) / P(X_i)\n",
+    "    prob_s0_x_i = (pdf_i[0] * prob_c[0]) / (pdf_i[0] * prob_c[0] + pdf_i[1] * prob_c[1])\n",
+    "    prob_s0_x.append(prob_s0_x_i)\n",
+    "\n",
+    "    # P(S_1 | X_i) = P(X_i | S_1)P(S_1) / P(X_i)\n",
+    "    prob_s1_x_i = (pdf_i[1] * prob_c[1]) / (pdf_i[0] * prob_c[0] + pdf_i[1] * prob_c[1])\n",
+    "    prob_s1_x.append(prob_s1_x_i)\n",
+    "\n",
+    "# Print updated posterior probabilities\n",
+    "probs = zip(data, prob_s0_x, prob_s1_x)\n",
+    "for p in probs:\n",
+    "    print(p[0])\n",
+    "    print(\"Probability of coming from S_0 = \" + str(p[1]))\n",
+    "    print(\"Probability of coming from S_1 = \" + str(p[2]))\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,10 +447,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data point 0 belongs to Cluster 1\n",
+      "Data point 1 belongs to Cluster 1\n",
+      "Data point 2 belongs to Cluster 1\n",
+      "Data point 3 belongs to Cluster 1\n",
+      "Data point 4 belongs to Cluster 1\n",
+      "Data point 5 belongs to Cluster 1\n",
+      "Data point 6 belongs to Cluster 1\n",
+      "Data point 7 belongs to Cluster 0\n",
+      "Data point 8 belongs to Cluster 1\n",
+      "Data point 9 belongs to Cluster 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "hard_assignments = []  # List to store hard cluster assignments\n",
+    "\n",
+    "for p_s0, p_s1 in zip(prob_s0_x, prob_s1_x):\n",
+    "    if p_s0 > p_s1:\n",
+    "        hard_assignments.append(0)  # Assign to cluster 0\n",
+    "    else:\n",
+    "        hard_assignments.append(1)  # Assign to cluster 1\n",
+    "\n",
+    "# Print the hard assignments\n",
+    "for i, assignment in enumerate(hard_assignments):\n",
+    "    print(f\"Data point {i} belongs to Cluster {assignment}\")"
+   ]
   }
  ],
  "metadata": {
