--- a/worksheet_15.ipynb
+++ b/worksheet_15.ipynb
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we don't move it a lot, we should not see change."
+    "If we do not move it a lot, we should not see a change. "
    ]
   },
   {
