--- a/worksheet_18.ipynb
+++ b/worksheet_18.ipynb
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The intersect is less accurate, but the coefficients for $x$ and $x^2$ still have high accuracy."
+    "Though the intersect is less accurate, the coefficients for $x$ and $x^2$ still has high accuracy."
    ]
   },
   {
